<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.commax.login.MainActivity">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/btn_coach_close"
        android:layout_gravity="left"
        android:background="@android:color/transparent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login" />

    <TextView
        android:id="@+id/commax_user_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/commax_user_text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/id" />

        <EditText
            android:id="@+id/ID_login_edit"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/id_hint"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password_login_edit"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:gravity="center" />

    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_gravity="center"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <TextView
        android:id="@+id/initial_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Initial"
        android:layout_gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="test_button"
        android:onClick="onClick" />
</LinearLayout>
