<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_bar_height"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/menu_bar_side_padding"
        android:paddingRight="@dimen/menu_bar_side_padding"
        android:paddingTop="@dimen/menu_bar_top_padding"
        android:paddingBottom="@dimen/menu_bar_bottom_padding">

        <ImageButton
            android:id="@+id/back_button_sub"
            android:layout_width="@dimen/menu_back_btn"
            android:layout_height="@dimen/menu_back_btn"
            android:layout_gravity="left"
            android:gravity="center"
            android:src="@mipmap/btn_coach_close"
            android:background="@android:color/transparent"
            android:onClick="onClick" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/component_width"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/title_text_size"
            android:gravity="center"
            android:text="@string/user_information"
            android:paddingBottom="@dimen/title_text_bottom_padding" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/component_text_height"
            android:text="@string/id" />

        <com.commax.login.Common.ClearEditText
            android:id="@+id/user_id"
            android:layout_width="match_parent"
            android:layout_height="@dimen/component_edit_height"
            android:gravity="center"
            android:textSize="@dimen/component_edit_size"
            android:editable="false" />

        <LinearLayout
            android:layout_width="@dimen/component_width"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/component_id_eidt_width"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/component_text_height"
                    android:text="@string/password"
                    android:textSize="@dimen/component_text_size" />

                <com.commax.login.Common.ClearEditText
                    android:id="@+id/user_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="textUri"
                    android:textSize="@dimen/component_edit_size"
                    android:editable="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/component_id_btn_layout_width"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="@dimen/component_id_btn_top_padding"
                android:paddingBottom="@dimen/component_id_btn_botton_padding"
                android:paddingLeft="@dimen/component_id_btn_left_padding">

                <Button
                    android:id="@+id/user_pwd_change"
                    android:layout_width="@dimen/component_id_btn_width"
                    android:layout_height="@dimen/component_id_btn_height"
                    android:text="@string/password_change"
                    android:onClick="onClick"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/round_button_selector"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/componene_id_btn_text_size" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/user_initial"
            android:layout_width="@dimen/circle_size"
            android:layout_height="@dimen/round_bt_height"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/user_initial"
            android:background="@drawable/round_button_selector"
            android:textColor="#ffffff"
            android:onClick="onClick"
            android:layout_gravity="center" />
    </LinearLayout>
</LinearLayout>